# praeceptor

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUTHORS  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  update.sh
app/: __init__.py  ages.py  auth.py  clock.py  config.py  db.py  main.py  model_client.py  models.py  pipeline.py  prompts.py  render.py  security.py  seed.py  subject_presets.py  templating.py  tutor_runtime.py
app/routers/: admin.py  student.py
app/sandbox/: __init__.py  executor.py  protocol.py  runner.py  server.py
app/templates/: _macros.html  base.html
app/templates/admin/: _birthdate_fields.html  _bubble.html  _conv_table.html  _loader.html  _nav.html  _transcript_chunk.html  confirm_delete.html  conversation.html  conversations.html  curriculum.html  dashboard.html  login.html  settings.html  student_detail.html  student_form.html  subject_context.html  subject_copy.html  subject_form.html  subject_prompts.html  test_chat.html
app/templates/student/: _bubble.html  _exchange.html  _history_chunk.html  _loader.html  _response.html  chat.html  help.html  login.html  subjects.html
app/tools/: __init__.py
scripts/: backup.py
static/: app.js  style.css  theme.js
